# MedRAX

./: .gitignore  README.md  interface.py  main.py  pyproject.toml  test_assistant_doctor.py  test_report.txt
demo/ultrasound/: placeholder_ultrasound_cine_loop.dcm
experiments/: .gitignore  benchmark_medrax_grok4.ipynb
medrax/: localization.py
medrax/docs/: system_prompts.txt
medrax/models/: model_factory.py
medrax/tools/: __init__.py  assistant_doctor.py  automated_preliminary_report.py  blood_test_analyzer.py  classification.py  ctr.py  dicom.py  grounding.py  imaging_series_tool.py  ophthalmic_imaging_tool.py  preliminary_report_utils.py  report_generation.py  segmentation.py  ultrasound_classification.py  ultrasound_segmentation.py  utils.py  xray_vqa.py
web_platform/: .gitignore  FINAL_STATUS.md  README.md  dev-backend.sh  dev-frontend.sh  docker-compose.yml  setup.sh
web_platform/backend/: .gitignore  Dockerfile  auth.py  chat_interface.py  chat_interface_minimal.py  database.py  logger_config.py  main.py  medrax_wrapper.py  pyproject.toml  requirements.txt  session_manager.py  tool_manager.py  utils.py
web_platform/frontend/: .gitignore  Dockerfile  next.config.js  tailwind.config.js
web_platform/frontend/app/: globals.css  layout.tsx  page.backup.tsx  page.tsx
web_platform/frontend/components/: ChatPanel.tsx  ClassificationResults.tsx  GroundingResults.tsx  ImageModal.tsx  MessageRenderer.tsx  PatientSidebar.tsx  (+4 more)
web_platform/tests/: README.md  test-backend.py  test-complete.py  test-frontend-backend.py  test_final.py  test_tools.py
(+14 files in other folders)
